// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`adding of tag entries > adds tag entries > #mineable/axe content 1`] = `
{
  "replace": false,
  "values": [
    {
      "id": "create:brass_block",
      "required": false,
    },
    "minecraft:obsidian",
  ],
}
`;

exports[`adding of tag entries > adds tag entries to custom registries > #example:something content 1`] = `
{
  "replace": false,
  "values": [
    "example:entry",
  ],
}
`;

exports[`loading of tags > loads tags correctly > #logs content 1`] = `
[
  "#minecraft:crimson_stems",
  "#minecraft:logs_that_burn",
  "#minecraft:warped_stems",
]
`;

exports[`loading of tags > loads tags correctly > #mineable/pickaxe content 1`] = `
[
  "#minecraft:anvil",
  "#minecraft:cauldrons",
  "#minecraft:rails",
  "#minecraft:shulker_boxes",
  "#minecraft:walls",
  "create:adjustable_chain_gearshift",
  "create:analog_lever",
  "create:andesite_alloy_block",
  "create:andesite_bars",
  "create:andesite_belt_funnel",
  "create:andesite_casing",
  "create:andesite_door",
  "create:andesite_encased_cogwheel",
  "create:andesite_encased_large_cogwheel",
  "create:andesite_encased_shaft",
  "create:andesite_funnel",
  "create:andesite_ladder",
  "create:andesite_pillar",
  "create:andesite_scaffolding",
  "create:andesite_tunnel",
  "create:asurine",
  "create:asurine_pillar",
  "create:basin",
  "create:belt",
  "create:black_nixie_tube",
  "create:black_valve_handle",
  "create:blaze_burner",
  "create:blue_nixie_tube",
  "create:blue_valve_handle",
  "create:brass_bars",
  "create:brass_belt_funnel",
  "create:brass_block",
  "create:brass_casing",
  "create:brass_door",
  "create:brass_encased_cogwheel",
  "create:brass_encased_large_cogwheel",
  "create:brass_encased_shaft",
  "create:brass_funnel",
  "create:brass_ladder",
  "create:brass_scaffolding",
  "create:brass_tunnel",
  "create:brown_nixie_tube",
  "create:brown_valve_handle",
  "create:calcite_pillar",
  "create:cart_assembler",
  "create:chute",
  "create:clipboard",
  "create:clockwork_bearing",
  "create:clutch",
  "create:cogwheel",
  "create:content_observer",
  "create:contraption_controls",
  "create:controller_rail",
  "create:controls",
  "create:copper_backtank",
  "create:copper_bars",
  "create:copper_casing",
  "create:copper_door",
  "create:copper_ladder",
  "create:copper_scaffolding",
  "create:copper_shingle_slab",
  "create:copper_shingle_stairs",
  "create:copper_shingles",
  "create:copper_tile_slab",
  "create:copper_tile_stairs",
  "create:copper_tiles",
  "create:copper_valve_handle",
  "create:copycat_base",
  "create:copycat_panel",
  "create:copycat_step",
  "create:creative_crate",
  "create:creative_fluid_tank",
  "create:creative_motor",
  "create:crimsite",
  "create:crimsite_pillar",
  "create:crushing_wheel",
  "create:cuckoo_clock",
  "create:cut_andesite",
  "create:cut_andesite_brick_slab",
  "create:cut_andesite_brick_stairs",
  "create:cut_andesite_brick_wall",
  "create:cut_andesite_bricks",
  "create:cut_andesite_slab",
  "create:cut_andesite_stairs",
  "create:cut_andesite_wall",
  "create:cut_asurine",
  "create:cut_asurine_brick_slab",
  "create:cut_asurine_brick_stairs",
  "create:cut_asurine_brick_wall",
  "create:cut_asurine_bricks",
  "create:cut_asurine_slab",
  "create:cut_asurine_stairs",
  "create:cut_asurine_wall",
  "create:cut_calcite",
  "create:cut_calcite_brick_slab",
  "create:cut_calcite_brick_stairs",
  "create:cut_calcite_brick_wall",
  "create:cut_calcite_bricks",
  "create:cut_calcite_slab",
  "create:cut_calcite_stairs",
  "create:cut_calcite_wall",
  "create:cut_crimsite",
  "create:cut_crimsite_brick_slab",
  "create:cut_crimsite_brick_stairs",
  "create:cut_crimsite_brick_wall",
  "create:cut_crimsite_bricks",
  "create:cut_crimsite_slab",
  "create:cut_crimsite_stairs",
  "create:cut_crimsite_wall",
  "create:cut_deepslate",
  "create:cut_deepslate_brick_slab",
  "create:cut_deepslate_brick_stairs",
  "create:cut_deepslate_brick_wall",
  "create:cut_deepslate_bricks",
  "create:cut_deepslate_slab",
  "create:cut_deepslate_stairs",
  "create:cut_deepslate_wall",
  "create:cut_diorite",
  "create:cut_diorite_brick_slab",
  "create:cut_diorite_brick_stairs",
  "create:cut_diorite_brick_wall",
  "create:cut_diorite_bricks",
  "create:cut_diorite_slab",
  "create:cut_diorite_stairs",
  "create:cut_diorite_wall",
  "create:cut_dripstone",
  "create:cut_dripstone_brick_slab",
  "create:cut_dripstone_brick_stairs",
  "create:cut_dripstone_brick_wall",
  "create:cut_dripstone_bricks",
  "create:cut_dripstone_slab",
  "create:cut_dripstone_stairs",
  "create:cut_dripstone_wall",
  "create:cut_granite",
  "create:cut_granite_brick_slab",
  "create:cut_granite_brick_stairs",
  "create:cut_granite_brick_wall",
  "create:cut_granite_bricks",
  "create:cut_granite_slab",
  "create:cut_granite_stairs",
  "create:cut_granite_wall",
  "create:cut_limestone",
  "create:cut_limestone_brick_slab",
  "create:cut_limestone_brick_stairs",
  "create:cut_limestone_brick_wall",
  "create:cut_limestone_bricks",
  "create:cut_limestone_slab",
  "create:cut_limestone_stairs",
  "create:cut_limestone_wall",
  "create:cut_ochrum",
  "create:cut_ochrum_brick_slab",
  "create:cut_ochrum_brick_stairs",
  "create:cut_ochrum_brick_wall",
  "create:cut_ochrum_bricks",
  "create:cut_ochrum_slab",
  "create:cut_ochrum_stairs",
  "create:cut_ochrum_wall",
  "create:cut_scorchia",
  "create:cut_scorchia_brick_slab",
  "create:cut_scorchia_brick_stairs",
  "create:cut_scorchia_brick_wall",
  "create:cut_scorchia_bricks",
  "create:cut_scorchia_slab",
  "create:cut_scorchia_stairs",
  "create:cut_scorchia_wall",
  "create:cut_scoria",
  "create:cut_scoria_brick_slab",
  "create:cut_scoria_brick_stairs",
  "create:cut_scoria_brick_wall",
  "create:cut_scoria_bricks",
  "create:cut_scoria_slab",
  "create:cut_scoria_stairs",
  "create:cut_scoria_wall",
  "create:cut_tuff",
  "create:cut_tuff_brick_slab",
  "create:cut_tuff_brick_stairs",
  "create:cut_tuff_brick_wall",
  "create:cut_tuff_bricks",
  "create:cut_tuff_slab",
  "create:cut_tuff_stairs",
  "create:cut_tuff_wall",
  "create:cut_veridium",
  "create:cut_veridium_brick_slab",
  "create:cut_veridium_brick_stairs",
  "create:cut_veridium_brick_wall",
  "create:cut_veridium_bricks",
  "create:cut_veridium_slab",
  "create:cut_veridium_stairs",
  "create:cut_veridium_wall",
  "create:cyan_nixie_tube",
  "create:cyan_valve_handle",
  "create:deepslate_pillar",
  "create:deepslate_zinc_ore",
  "create:deployer",
  "create:depot",
  "create:diorite_pillar",
  "create:display_board",
  "create:display_link",
  "create:dripstone_pillar",
  "create:elevator_contact",
  "create:elevator_pulley",
  "create:encased_chain_drive",
  "create:encased_fan",
  "create:encased_fluid_pipe",
  "create:experience_block",
  "create:exposed_copper_shingle_slab",
  "create:exposed_copper_shingle_stairs",
  "create:exposed_copper_shingles",
  "create:exposed_copper_tile_slab",
  "create:exposed_copper_tile_stairs",
  "create:exposed_copper_tiles",
  "create:fluid_pipe",
  "create:fluid_tank",
  "create:fluid_valve",
  "create:flywheel",
  "create:framed_glass_door",
  "create:framed_glass_trapdoor",
  "create:gantry_carriage",
  "create:gantry_shaft",
  "create:gearbox",
  "create:gearshift",
  "create:glass_fluid_pipe",
  "create:granite_pillar",
  "create:gray_nixie_tube",
  "create:gray_valve_handle",
  "create:green_nixie_tube",
  "create:green_valve_handle",
  "create:hand_crank",
  "create:haunted_bell",
  "create:hose_pulley",
  "create:industrial_iron_block",
  "create:item_drain",
  "create:item_vault",
  "create:large_bogey",
  "create:large_cogwheel",
  "create:large_water_wheel",
  "create:layered_andesite",
  "create:layered_asurine",
  "create:layered_calcite",
  "create:layered_crimsite",
  "create:layered_deepslate",
  "create:layered_diorite",
  "create:layered_dripstone",
  "create:layered_granite",
  "create:layered_limestone",
  "create:layered_ochrum",
  "create:layered_scorchia",
  "create:layered_scoria",
  "create:layered_tuff",
  "create:layered_veridium",
  "create:light_blue_nixie_tube",
  "create:light_blue_valve_handle",
  "create:light_gray_nixie_tube",
  "create:light_gray_valve_handle",
  "create:lime_nixie_tube",
  "create:lime_valve_handle",
  "create:limestone",
  "create:limestone_pillar",
  "create:linear_chassis",
  "create:lit_blaze_burner",
  "create:magenta_nixie_tube",
  "create:magenta_valve_handle",
  "create:mechanical_arm",
  "create:mechanical_bearing",
  "create:mechanical_crafter",
  "create:mechanical_drill",
  "create:mechanical_harvester",
  "create:mechanical_mixer",
  "create:mechanical_piston",
  "create:mechanical_piston_head",
  "create:mechanical_plough",
  "create:mechanical_press",
  "create:mechanical_pump",
  "create:mechanical_roller",
  "create:mechanical_saw",
  "create:metal_bracket",
  "create:metal_girder",
  "create:metal_girder_encased_shaft",
  "create:millstone",
  "create:mysterious_cuckoo_clock",
  "create:netherite_backtank",
  "create:nixie_tube",
  "create:nozzle",
  "create:ochrum",
  "create:ochrum_pillar",
  "create:orange_valve_handle",
  "create:oxidized_copper_shingle_slab",
  "create:oxidized_copper_shingle_stairs",
  "create:oxidized_copper_shingles",
  "create:oxidized_copper_tile_slab",
  "create:oxidized_copper_tile_stairs",
  "create:oxidized_copper_tiles",
  "create:peculiar_bell",
  "create:pink_nixie_tube",
  "create:pink_valve_handle",
  "create:piston_extension_pole",
  "create:placard",
  "create:polished_cut_andesite",
  "create:polished_cut_andesite_slab",
  "create:polished_cut_andesite_stairs",
  "create:polished_cut_andesite_wall",
  "create:polished_cut_asurine",
  "create:polished_cut_asurine_slab",
  "create:polished_cut_asurine_stairs",
  "create:polished_cut_asurine_wall",
  "create:polished_cut_calcite",
  "create:polished_cut_calcite_slab",
  "create:polished_cut_calcite_stairs",
  "create:polished_cut_calcite_wall",
  "create:polished_cut_crimsite",
  "create:polished_cut_crimsite_slab",
  "create:polished_cut_crimsite_stairs",
  "create:polished_cut_crimsite_wall",
  "create:polished_cut_deepslate",
  "create:polished_cut_deepslate_slab",
  "create:polished_cut_deepslate_stairs",
  "create:polished_cut_deepslate_wall",
  "create:polished_cut_diorite",
  "create:polished_cut_diorite_slab",
  "create:polished_cut_diorite_stairs",
  "create:polished_cut_diorite_wall",
  "create:polished_cut_dripstone",
  "create:polished_cut_dripstone_slab",
  "create:polished_cut_dripstone_stairs",
  "create:polished_cut_dripstone_wall",
  "create:polished_cut_granite",
  "create:polished_cut_granite_slab",
  "create:polished_cut_granite_stairs",
  "create:polished_cut_granite_wall",
  "create:polished_cut_limestone",
  "create:polished_cut_limestone_slab",
  "create:polished_cut_limestone_stairs",
  "create:polished_cut_limestone_wall",
  "create:polished_cut_ochrum",
  "create:polished_cut_ochrum_slab",
  "create:polished_cut_ochrum_stairs",
  "create:polished_cut_ochrum_wall",
  "create:polished_cut_scorchia",
  "create:polished_cut_scorchia_slab",
  "create:polished_cut_scorchia_stairs",
  "create:polished_cut_scorchia_wall",
  "create:polished_cut_scoria",
  "create:polished_cut_scoria_slab",
  "create:polished_cut_scoria_stairs",
  "create:polished_cut_scoria_wall",
  "create:polished_cut_tuff",
  "create:polished_cut_tuff_slab",
  "create:polished_cut_tuff_stairs",
  "create:polished_cut_tuff_wall",
  "create:polished_cut_veridium",
  "create:polished_cut_veridium_slab",
  "create:polished_cut_veridium_stairs",
  "create:polished_cut_veridium_wall",
  "create:portable_fluid_interface",
  "create:portable_storage_interface",
  "create:powered_shaft",
  "create:purple_nixie_tube",
  "create:purple_valve_handle",
  "create:radial_chassis",
  "create:railway_casing",
  "create:raw_zinc_block",
  "create:red_nixie_tube",
  "create:red_valve_handle",
  "create:redstone_contact",
  "create:redstone_link",
  "create:refined_radiance_casing",
  "create:rope_pulley",
  "create:rose_quartz_block",
  "create:rose_quartz_lamp",
  "create:rose_quartz_tiles",
  "create:rotation_speed_controller",
  "create:schematic_table",
  "create:schematicannon",
  "create:scorchia",
  "create:scorchia_pillar",
  "create:scoria",
  "create:scoria_pillar",
  "create:secondary_linear_chassis",
  "create:sequenced_gearshift",
  "create:shadow_steel_casing",
  "create:shaft",
  "create:small_andesite_brick_slab",
  "create:small_andesite_brick_stairs",
  "create:small_andesite_brick_wall",
  "create:small_andesite_bricks",
  "create:small_asurine_brick_slab",
  "create:small_asurine_brick_stairs",
  "create:small_asurine_brick_wall",
  "create:small_asurine_bricks",
  "create:small_bogey",
  "create:small_calcite_brick_slab",
  "create:small_calcite_brick_stairs",
  "create:small_calcite_brick_wall",
  "create:small_calcite_bricks",
  "create:small_crimsite_brick_slab",
  "create:small_crimsite_brick_stairs",
  "create:small_crimsite_brick_wall",
  "create:small_crimsite_bricks",
  "create:small_deepslate_brick_slab",
  "create:small_deepslate_brick_stairs",
  "create:small_deepslate_brick_wall",
  "create:small_deepslate_bricks",
  "create:small_diorite_brick_slab",
  "create:small_diorite_brick_stairs",
  "create:small_diorite_brick_wall",
  "create:small_diorite_bricks",
  "create:small_dripstone_brick_slab",
  "create:small_dripstone_brick_stairs",
  "create:small_dripstone_brick_wall",
  "create:small_dripstone_bricks",
  "create:small_granite_brick_slab",
  "create:small_granite_brick_stairs",
  "create:small_granite_brick_wall",
  "create:small_granite_bricks",
  "create:small_limestone_brick_slab",
  "create:small_limestone_brick_stairs",
  "create:small_limestone_brick_wall",
  "create:small_limestone_bricks",
  "create:small_ochrum_brick_slab",
  "create:small_ochrum_brick_stairs",
  "create:small_ochrum_brick_wall",
  "create:small_ochrum_bricks",
  "create:small_rose_quartz_tiles",
  "create:small_scorchia_brick_slab",
  "create:small_scorchia_brick_stairs",
  "create:small_scorchia_brick_wall",
  "create:small_scorchia_bricks",
  "create:small_scoria_brick_slab",
  "create:small_scoria_brick_stairs",
  "create:small_scoria_brick_wall",
  "create:small_scoria_bricks",
  "create:small_tuff_brick_slab",
  "create:small_tuff_brick_stairs",
  "create:small_tuff_brick_wall",
  "create:small_tuff_bricks",
  "create:small_veridium_brick_slab",
  "create:small_veridium_brick_stairs",
  "create:small_veridium_brick_wall",
  "create:small_veridium_bricks",
  "create:smart_chute",
  "create:smart_fluid_pipe",
  "create:speedometer",
  "create:spout",
  "create:steam_engine",
  "create:steam_whistle",
  "create:steam_whistle_extension",
  "create:sticker",
  "create:sticky_mechanical_piston",
  "create:stockpile_switch",
  "create:stressometer",
  "create:track",
  "create:track_observer",
  "create:track_signal",
  "create:track_station",
  "create:train_door",
  "create:train_trapdoor",
  "create:tuff_pillar",
  "create:turntable",
  "create:veridium",
  "create:veridium_pillar",
  "create:water_wheel",
  "create:water_wheel_structure",
  "create:waxed_copper_shingle_slab",
  "create:waxed_copper_shingle_stairs",
  "create:waxed_copper_shingles",
  "create:waxed_copper_tile_slab",
  "create:waxed_copper_tile_stairs",
  "create:waxed_copper_tiles",
  "create:waxed_exposed_copper_shingle_slab",
  "create:waxed_exposed_copper_shingle_stairs",
  "create:waxed_exposed_copper_shingles",
  "create:waxed_exposed_copper_tile_slab",
  "create:waxed_exposed_copper_tile_stairs",
  "create:waxed_exposed_copper_tiles",
  "create:waxed_oxidized_copper_shingle_slab",
  "create:waxed_oxidized_copper_shingle_stairs",
  "create:waxed_oxidized_copper_shingles",
  "create:waxed_oxidized_copper_tile_slab",
  "create:waxed_oxidized_copper_tile_stairs",
  "create:waxed_oxidized_copper_tiles",
  "create:waxed_weathered_copper_shingle_slab",
  "create:waxed_weathered_copper_shingle_stairs",
  "create:waxed_weathered_copper_shingles",
  "create:waxed_weathered_copper_tile_slab",
  "create:waxed_weathered_copper_tile_stairs",
  "create:waxed_weathered_copper_tiles",
  "create:weathered_copper_shingle_slab",
  "create:weathered_copper_shingle_stairs",
  "create:weathered_copper_shingles",
  "create:weathered_copper_tile_slab",
  "create:weathered_copper_tile_stairs",
  "create:weathered_copper_tiles",
  "create:weighted_ejector",
  "create:white_nixie_tube",
  "create:white_valve_handle",
  "create:windmill_bearing",
  "create:wooden_bracket",
  "create:yellow_nixie_tube",
  "create:yellow_valve_handle",
  "create:zinc_block",
  "create:zinc_ore",
  "minecraft:amethyst_block",
  "minecraft:amethyst_cluster",
  "minecraft:ancient_debris",
  "minecraft:andesite",
  "minecraft:andesite_slab",
  "minecraft:andesite_stairs",
  "minecraft:basalt",
  "minecraft:bell",
  "minecraft:black_concrete",
  "minecraft:black_glazed_terracotta",
  "minecraft:black_terracotta",
  "minecraft:blackstone",
  "minecraft:blackstone_slab",
  "minecraft:blackstone_stairs",
  "minecraft:blast_furnace",
  "minecraft:blue_concrete",
  "minecraft:blue_glazed_terracotta",
  "minecraft:blue_ice",
  "minecraft:blue_terracotta",
  "minecraft:bone_block",
  "minecraft:brain_coral_block",
  "minecraft:brewing_stand",
  "minecraft:brick_slab",
  "minecraft:brick_stairs",
  "minecraft:bricks",
  "minecraft:brown_concrete",
  "minecraft:brown_glazed_terracotta",
  "minecraft:brown_terracotta",
  "minecraft:bubble_coral_block",
  "minecraft:budding_amethyst",
  "minecraft:calcite",
  "minecraft:chain",
  "minecraft:chiseled_deepslate",
  "minecraft:chiseled_nether_bricks",
  "minecraft:chiseled_polished_blackstone",
  "minecraft:chiseled_quartz_block",
  "minecraft:chiseled_red_sandstone",
  "minecraft:chiseled_sandstone",
  "minecraft:chiseled_stone_bricks",
  "minecraft:coal_block",
  "minecraft:coal_ore",
  "minecraft:cobbled_deepslate",
  "minecraft:cobbled_deepslate_slab",
  "minecraft:cobbled_deepslate_stairs",
  "minecraft:cobblestone",
  "minecraft:cobblestone_slab",
  "minecraft:cobblestone_stairs",
  "minecraft:conduit",
  "minecraft:copper_block",
  "minecraft:copper_ore",
  "minecraft:cracked_deepslate_bricks",
  "minecraft:cracked_deepslate_tiles",
  "minecraft:cracked_nether_bricks",
  "minecraft:cracked_polished_blackstone_bricks",
  "minecraft:cracked_stone_bricks",
  "minecraft:crimson_nylium",
  "minecraft:crying_obsidian",
  "minecraft:cut_copper",
  "minecraft:cut_copper_slab",
  "minecraft:cut_copper_stairs",
  "minecraft:cut_red_sandstone",
  "minecraft:cut_red_sandstone_slab",
  "minecraft:cut_sandstone",
  "minecraft:cut_sandstone_slab",
  "minecraft:cyan_concrete",
  "minecraft:cyan_glazed_terracotta",
  "minecraft:cyan_terracotta",
  "minecraft:dark_prismarine",
  "minecraft:dark_prismarine_slab",
  "minecraft:dark_prismarine_stairs",
  "minecraft:dead_brain_coral",
  "minecraft:dead_brain_coral_block",
  "minecraft:dead_brain_coral_fan",
  "minecraft:dead_brain_coral_wall_fan",
  "minecraft:dead_bubble_coral",
  "minecraft:dead_bubble_coral_block",
  "minecraft:dead_bubble_coral_fan",
  "minecraft:dead_bubble_coral_wall_fan",
  "minecraft:dead_fire_coral",
  "minecraft:dead_fire_coral_block",
  "minecraft:dead_fire_coral_fan",
  "minecraft:dead_fire_coral_wall_fan",
  "minecraft:dead_horn_coral",
  "minecraft:dead_horn_coral_block",
  "minecraft:dead_horn_coral_fan",
  "minecraft:dead_horn_coral_wall_fan",
  "minecraft:dead_tube_coral",
  "minecraft:dead_tube_coral_block",
  "minecraft:dead_tube_coral_fan",
  "minecraft:dead_tube_coral_wall_fan",
  "minecraft:deepslate",
  "minecraft:deepslate_brick_slab",
  "minecraft:deepslate_brick_stairs",
  "minecraft:deepslate_bricks",
  "minecraft:deepslate_coal_ore",
  "minecraft:deepslate_copper_ore",
  "minecraft:deepslate_diamond_ore",
  "minecraft:deepslate_emerald_ore",
  "minecraft:deepslate_gold_ore",
  "minecraft:deepslate_iron_ore",
  "minecraft:deepslate_lapis_ore",
  "minecraft:deepslate_redstone_ore",
  "minecraft:deepslate_tile_slab",
  "minecraft:deepslate_tile_stairs",
  "minecraft:deepslate_tiles",
  "minecraft:diamond_block",
  "minecraft:diamond_ore",
  "minecraft:diorite",
  "minecraft:diorite_slab",
  "minecraft:diorite_stairs",
  "minecraft:dispenser",
  "minecraft:dripstone_block",
  "minecraft:dropper",
  "minecraft:emerald_block",
  "minecraft:emerald_ore",
  "minecraft:enchanting_table",
  "minecraft:end_stone",
  "minecraft:end_stone_brick_slab",
  "minecraft:end_stone_brick_stairs",
  "minecraft:end_stone_bricks",
  "minecraft:ender_chest",
  "minecraft:exposed_copper",
  "minecraft:exposed_cut_copper",
  "minecraft:exposed_cut_copper_slab",
  "minecraft:exposed_cut_copper_stairs",
  "minecraft:fire_coral_block",
  "minecraft:furnace",
  "minecraft:gilded_blackstone",
  "minecraft:gold_block",
  "minecraft:gold_ore",
  "minecraft:granite",
  "minecraft:granite_slab",
  "minecraft:granite_stairs",
  "minecraft:gray_concrete",
  "minecraft:gray_glazed_terracotta",
  "minecraft:gray_terracotta",
  "minecraft:green_concrete",
  "minecraft:green_glazed_terracotta",
  "minecraft:green_terracotta",
  "minecraft:grindstone",
  "minecraft:heavy_weighted_pressure_plate",
  "minecraft:hopper",
  "minecraft:horn_coral_block",
  "minecraft:ice",
  "minecraft:infested_chiseled_stone_bricks",
  "minecraft:infested_cobblestone",
  "minecraft:infested_cracked_stone_bricks",
  "minecraft:infested_deepslate",
  "minecraft:infested_mossy_stone_bricks",
  "minecraft:infested_stone",
  "minecraft:infested_stone_bricks",
  "minecraft:iron_bars",
  "minecraft:iron_block",
  "minecraft:iron_door",
  "minecraft:iron_ore",
  "minecraft:iron_trapdoor",
  "minecraft:lantern",
  "minecraft:lapis_block",
  "minecraft:lapis_ore",
  "minecraft:large_amethyst_bud",
  "minecraft:light_blue_concrete",
  "minecraft:light_blue_glazed_terracotta",
  "minecraft:light_blue_terracotta",
  "minecraft:light_gray_concrete",
  "minecraft:light_gray_glazed_terracotta",
  "minecraft:light_gray_terracotta",
  "minecraft:light_weighted_pressure_plate",
  "minecraft:lightning_rod",
  "minecraft:lime_concrete",
  "minecraft:lime_glazed_terracotta",
  "minecraft:lime_terracotta",
  "minecraft:lodestone",
  "minecraft:magenta_concrete",
  "minecraft:magenta_glazed_terracotta",
  "minecraft:magenta_terracotta",
  "minecraft:magma_block",
  "minecraft:medium_amethyst_bud",
  "minecraft:mossy_cobblestone",
  "minecraft:mossy_cobblestone_slab",
  "minecraft:mossy_cobblestone_stairs",
  "minecraft:mossy_stone_brick_slab",
  "minecraft:mossy_stone_brick_stairs",
  "minecraft:mossy_stone_bricks",
  "minecraft:nether_brick_fence",
  "minecraft:nether_brick_slab",
  "minecraft:nether_brick_stairs",
  "minecraft:nether_bricks",
  "minecraft:nether_gold_ore",
  "minecraft:nether_quartz_ore",
  "minecraft:netherite_block",
  "minecraft:netherrack",
  "minecraft:observer",
  "minecraft:obsidian",
  "minecraft:orange_concrete",
  "minecraft:orange_glazed_terracotta",
  "minecraft:orange_terracotta",
  "minecraft:oxidized_copper",
  "minecraft:oxidized_cut_copper",
  "minecraft:oxidized_cut_copper_slab",
  "minecraft:oxidized_cut_copper_stairs",
  "minecraft:packed_ice",
  "minecraft:petrified_oak_slab",
  "minecraft:pink_concrete",
  "minecraft:pink_glazed_terracotta",
  "minecraft:pink_terracotta",
  "minecraft:piston",
  "minecraft:piston_head",
  "minecraft:pointed_dripstone",
  "minecraft:polished_andesite",
  "minecraft:polished_andesite_slab",
  "minecraft:polished_andesite_stairs",
  "minecraft:polished_basalt",
  "minecraft:polished_blackstone",
  "minecraft:polished_blackstone_brick_slab",
  "minecraft:polished_blackstone_brick_stairs",
  "minecraft:polished_blackstone_bricks",
  "minecraft:polished_blackstone_pressure_plate",
  "minecraft:polished_blackstone_slab",
  "minecraft:polished_blackstone_stairs",
  "minecraft:polished_deepslate",
  "minecraft:polished_deepslate_slab",
  "minecraft:polished_deepslate_stairs",
  "minecraft:polished_diorite",
  "minecraft:polished_diorite_slab",
  "minecraft:polished_diorite_stairs",
  "minecraft:polished_granite",
  "minecraft:polished_granite_slab",
  "minecraft:polished_granite_stairs",
  "minecraft:prismarine",
  "minecraft:prismarine_brick_slab",
  "minecraft:prismarine_brick_stairs",
  "minecraft:prismarine_bricks",
  "minecraft:prismarine_slab",
  "minecraft:prismarine_stairs",
  "minecraft:purple_concrete",
  "minecraft:purple_glazed_terracotta",
  "minecraft:purple_terracotta",
  "minecraft:purpur_block",
  "minecraft:purpur_pillar",
  "minecraft:purpur_slab",
  "minecraft:purpur_stairs",
  "minecraft:quartz_block",
  "minecraft:quartz_bricks",
  "minecraft:quartz_pillar",
  "minecraft:quartz_slab",
  "minecraft:quartz_stairs",
  "minecraft:raw_copper_block",
  "minecraft:raw_gold_block",
  "minecraft:raw_iron_block",
  "minecraft:red_concrete",
  "minecraft:red_glazed_terracotta",
  "minecraft:red_nether_brick_slab",
  "minecraft:red_nether_brick_stairs",
  "minecraft:red_nether_bricks",
  "minecraft:red_sandstone",
  "minecraft:red_sandstone_slab",
  "minecraft:red_sandstone_stairs",
  "minecraft:red_terracotta",
  "minecraft:redstone_block",
  "minecraft:redstone_ore",
  "minecraft:respawn_anchor",
  "minecraft:sandstone",
  "minecraft:sandstone_slab",
  "minecraft:sandstone_stairs",
  "minecraft:small_amethyst_bud",
  "minecraft:smoker",
  "minecraft:smooth_basalt",
  "minecraft:smooth_quartz",
  "minecraft:smooth_quartz_slab",
  "minecraft:smooth_quartz_stairs",
  "minecraft:smooth_red_sandstone",
  "minecraft:smooth_red_sandstone_slab",
  "minecraft:smooth_red_sandstone_stairs",
  "minecraft:smooth_sandstone",
  "minecraft:smooth_sandstone_slab",
  "minecraft:smooth_sandstone_stairs",
  "minecraft:smooth_stone",
  "minecraft:smooth_stone_slab",
  "minecraft:soul_lantern",
  "minecraft:spawner",
  "minecraft:sticky_piston",
  "minecraft:stone",
  "minecraft:stone_brick_slab",
  "minecraft:stone_brick_stairs",
  "minecraft:stone_bricks",
  "minecraft:stone_button",
  "minecraft:stone_pressure_plate",
  "minecraft:stone_slab",
  "minecraft:stone_stairs",
  "minecraft:stonecutter",
  "minecraft:terracotta",
  "minecraft:tube_coral_block",
  "minecraft:tuff",
  "minecraft:warped_nylium",
  "minecraft:waxed_copper_block",
  "minecraft:waxed_cut_copper",
  "minecraft:waxed_cut_copper_slab",
  "minecraft:waxed_cut_copper_stairs",
  "minecraft:waxed_exposed_copper",
  "minecraft:waxed_exposed_cut_copper",
  "minecraft:waxed_exposed_cut_copper_slab",
  "minecraft:waxed_exposed_cut_copper_stairs",
  "minecraft:waxed_oxidized_copper",
  "minecraft:waxed_oxidized_cut_copper",
  "minecraft:waxed_oxidized_cut_copper_slab",
  "minecraft:waxed_oxidized_cut_copper_stairs",
  "minecraft:waxed_weathered_copper",
  "minecraft:waxed_weathered_cut_copper",
  "minecraft:waxed_weathered_cut_copper_slab",
  "minecraft:waxed_weathered_cut_copper_stairs",
  "minecraft:weathered_copper",
  "minecraft:weathered_cut_copper",
  "minecraft:weathered_cut_copper_slab",
  "minecraft:weathered_cut_copper_stairs",
  "minecraft:white_concrete",
  "minecraft:white_glazed_terracotta",
  "minecraft:white_terracotta",
  "minecraft:yellow_concrete",
  "minecraft:yellow_glazed_terracotta",
  "minecraft:yellow_terracotta",
]
`;

exports[`loading of tags > resolves tags correctly > resolved #mineable/axe entries 1`] = `
[
  "minecraft:black_banner",
  "minecraft:black_wall_banner",
  "minecraft:blue_banner",
  "minecraft:blue_wall_banner",
  "minecraft:brown_banner",
  "minecraft:brown_wall_banner",
  "minecraft:cyan_banner",
  "minecraft:cyan_wall_banner",
  "minecraft:gray_banner",
  "minecraft:gray_wall_banner",
  "minecraft:green_banner",
  "minecraft:green_wall_banner",
  "minecraft:light_blue_banner",
  "minecraft:light_blue_wall_banner",
  "minecraft:light_gray_banner",
  "minecraft:light_gray_wall_banner",
  "minecraft:lime_banner",
  "minecraft:lime_wall_banner",
  "minecraft:magenta_banner",
  "minecraft:magenta_wall_banner",
  "minecraft:orange_banner",
  "minecraft:orange_wall_banner",
  "minecraft:pink_banner",
  "minecraft:pink_wall_banner",
  "minecraft:purple_banner",
  "minecraft:purple_wall_banner",
  "minecraft:red_banner",
  "minecraft:red_wall_banner",
  "minecraft:white_banner",
  "minecraft:white_wall_banner",
  "minecraft:yellow_banner",
  "minecraft:yellow_wall_banner",
  "minecraft:acacia_fence_gate",
  "minecraft:birch_fence_gate",
  "minecraft:crimson_fence_gate",
  "minecraft:dark_oak_fence_gate",
  "minecraft:jungle_fence_gate",
  "minecraft:oak_fence_gate",
  "minecraft:spruce_fence_gate",
  "minecraft:warped_fence_gate",
  "minecraft:crimson_hyphae",
  "minecraft:crimson_stem",
  "minecraft:stripped_crimson_hyphae",
  "minecraft:stripped_crimson_stem",
  "minecraft:acacia_log",
  "minecraft:acacia_wood",
  "minecraft:stripped_acacia_log",
  "minecraft:stripped_acacia_wood",
  "minecraft:birch_log",
  "minecraft:birch_wood",
  "minecraft:stripped_birch_log",
  "minecraft:stripped_birch_wood",
  "minecraft:dark_oak_log",
  "minecraft:dark_oak_wood",
  "minecraft:stripped_dark_oak_log",
  "minecraft:stripped_dark_oak_wood",
  "minecraft:jungle_log",
  "minecraft:jungle_wood",
  "minecraft:stripped_jungle_log",
  "minecraft:stripped_jungle_wood",
  "minecraft:oak_log",
  "minecraft:oak_wood",
  "minecraft:stripped_oak_log",
  "minecraft:stripped_oak_wood",
  "minecraft:spruce_log",
  "minecraft:spruce_wood",
  "minecraft:stripped_spruce_log",
  "minecraft:stripped_spruce_wood",
  "minecraft:stripped_warped_hyphae",
  "minecraft:stripped_warped_stem",
  "minecraft:warped_hyphae",
  "minecraft:warped_stem",
  "minecraft:acacia_planks",
  "minecraft:birch_planks",
  "minecraft:crimson_planks",
  "minecraft:dark_oak_planks",
  "minecraft:jungle_planks",
  "minecraft:oak_planks",
  "minecraft:spruce_planks",
  "minecraft:warped_planks",
  "minecraft:acacia_sapling",
  "minecraft:azalea",
  "minecraft:birch_sapling",
  "minecraft:dark_oak_sapling",
  "minecraft:flowering_azalea",
  "minecraft:jungle_sapling",
  "minecraft:oak_sapling",
  "minecraft:spruce_sapling",
  "minecraft:acacia_sign",
  "minecraft:birch_sign",
  "minecraft:crimson_sign",
  "minecraft:dark_oak_sign",
  "minecraft:jungle_sign",
  "minecraft:oak_sign",
  "minecraft:spruce_sign",
  "minecraft:warped_sign",
  "minecraft:acacia_wall_sign",
  "minecraft:birch_wall_sign",
  "minecraft:crimson_wall_sign",
  "minecraft:dark_oak_wall_sign",
  "minecraft:jungle_wall_sign",
  "minecraft:oak_wall_sign",
  "minecraft:spruce_wall_sign",
  "minecraft:warped_wall_sign",
  "minecraft:acacia_button",
  "minecraft:birch_button",
  "minecraft:crimson_button",
  "minecraft:dark_oak_button",
  "minecraft:jungle_button",
  "minecraft:oak_button",
  "minecraft:spruce_button",
  "minecraft:warped_button",
  "create:andesite_door",
  "create:brass_door",
  "create:copper_door",
  "create:framed_glass_door",
  "create:train_door",
  "minecraft:acacia_door",
  "minecraft:birch_door",
  "minecraft:crimson_door",
  "minecraft:dark_oak_door",
  "minecraft:jungle_door",
  "minecraft:oak_door",
  "minecraft:spruce_door",
  "minecraft:warped_door",
  "minecraft:acacia_fence",
  "minecraft:birch_fence",
  "minecraft:crimson_fence",
  "minecraft:dark_oak_fence",
  "minecraft:jungle_fence",
  "minecraft:oak_fence",
  "minecraft:spruce_fence",
  "minecraft:warped_fence",
  "minecraft:acacia_pressure_plate",
  "minecraft:birch_pressure_plate",
  "minecraft:crimson_pressure_plate",
  "minecraft:dark_oak_pressure_plate",
  "minecraft:jungle_pressure_plate",
  "minecraft:oak_pressure_plate",
  "minecraft:spruce_pressure_plate",
  "minecraft:warped_pressure_plate",
  "minecraft:acacia_slab",
  "minecraft:birch_slab",
  "minecraft:crimson_slab",
  "minecraft:dark_oak_slab",
  "minecraft:jungle_slab",
  "minecraft:oak_slab",
  "minecraft:spruce_slab",
  "minecraft:warped_slab",
  "minecraft:acacia_stairs",
  "minecraft:birch_stairs",
  "minecraft:crimson_stairs",
  "minecraft:dark_oak_stairs",
  "minecraft:jungle_stairs",
  "minecraft:oak_stairs",
  "minecraft:spruce_stairs",
  "minecraft:warped_stairs",
  "minecraft:acacia_trapdoor",
  "minecraft:birch_trapdoor",
  "minecraft:crimson_trapdoor",
  "minecraft:dark_oak_trapdoor",
  "minecraft:jungle_trapdoor",
  "minecraft:oak_trapdoor",
  "minecraft:spruce_trapdoor",
  "minecraft:warped_trapdoor",
  "create:adjustable_chain_gearshift",
  "create:analog_lever",
  "create:andesite_casing",
  "create:andesite_encased_cogwheel",
  "create:andesite_encased_large_cogwheel",
  "create:andesite_encased_shaft",
  "create:belt",
  "create:black_sail",
  "create:black_seat",
  "create:blue_sail",
  "create:blue_seat",
  "create:brass_casing",
  "create:brass_encased_cogwheel",
  "create:brass_encased_large_cogwheel",
  "create:brass_encased_shaft",
  "create:brown_sail",
  "create:brown_seat",
  "create:cart_assembler",
  "create:clipboard",
  "create:clockwork_bearing",
  "create:clutch",
  "create:cogwheel",
  "create:content_observer",
  "create:contraption_controls",
  "create:copper_casing",
  "create:copycat_panel",
  "create:copycat_step",
  "create:creative_crate",
  "create:cuckoo_clock",
  "create:cyan_sail",
  "create:cyan_seat",
  "create:deployer",
  "create:depot",
  "create:display_link",
  "create:elevator_contact",
  "create:elevator_pulley",
  "create:encased_chain_drive",
  "create:encased_fan",
  "create:encased_fluid_pipe",
  "create:flywheel",
  "create:gantry_carriage",
  "create:gantry_shaft",
  "create:gearbox",
  "create:gearshift",
  "create:gray_sail",
  "create:gray_seat",
  "create:green_sail",
  "create:green_seat",
  "create:hand_crank",
  "create:large_cogwheel",
  "create:large_water_wheel",
  "create:lectern_controller",
  "create:light_blue_sail",
  "create:light_blue_seat",
  "create:light_gray_sail",
  "create:light_gray_seat",
  "create:lime_sail",
  "create:lime_seat",
  "create:linear_chassis",
  "create:magenta_sail",
  "create:magenta_seat",
  "create:mechanical_arm",
  "create:mechanical_bearing",
  "create:mechanical_crafter",
  "create:mechanical_drill",
  "create:mechanical_harvester",
  "create:mechanical_mixer",
  "create:mechanical_piston",
  "create:mechanical_piston_head",
  "create:mechanical_plough",
  "create:mechanical_press",
  "create:mechanical_roller",
  "create:mechanical_saw",
  "create:mysterious_cuckoo_clock",
  "create:nozzle",
  "create:orange_sail",
  "create:orange_seat",
  "create:pink_sail",
  "create:pink_seat",
  "create:piston_extension_pole",
  "create:portable_fluid_interface",
  "create:portable_storage_interface",
  "create:purple_sail",
  "create:purple_seat",
  "create:radial_chassis",
  "create:railway_casing",
  "create:red_sail",
  "create:red_seat",
  "create:redstone_contact",
  "create:redstone_link",
  "create:refined_radiance_casing",
  "create:rope_pulley",
  "create:rotation_speed_controller",
  "create:sail_frame",
  "create:schematic_table",
  "create:secondary_linear_chassis",
  "create:sequenced_gearshift",
  "create:shadow_steel_casing",
  "create:speedometer",
  "create:sticky_mechanical_piston",
  "create:stockpile_switch",
  "create:stressometer",
  "create:turntable",
  "create:water_wheel",
  "create:water_wheel_structure",
  "create:weighted_ejector",
  "create:white_sail",
  "create:white_seat",
  "create:windmill_bearing",
  "create:wooden_bracket",
  "create:yellow_sail",
  "create:yellow_seat",
  "minecraft:attached_melon_stem",
  "minecraft:attached_pumpkin_stem",
  "minecraft:azalea",
  "minecraft:bamboo",
  "minecraft:barrel",
  "minecraft:bee_nest",
  "minecraft:beehive",
  "minecraft:beetroots",
  "minecraft:big_dripleaf",
  "minecraft:big_dripleaf_stem",
  "minecraft:bookshelf",
  "minecraft:brown_mushroom",
  "minecraft:brown_mushroom_block",
  "minecraft:campfire",
  "minecraft:carrots",
  "minecraft:cartography_table",
  "minecraft:carved_pumpkin",
  "minecraft:cave_vines",
  "minecraft:cave_vines_plant",
  "minecraft:chest",
  "minecraft:chorus_flower",
  "minecraft:chorus_plant",
  "minecraft:cocoa",
  "minecraft:composter",
  "minecraft:crafting_table",
  "minecraft:crimson_fungus",
  "minecraft:daylight_detector",
  "minecraft:dead_bush",
  "minecraft:fern",
  "minecraft:fletching_table",
  "minecraft:glow_lichen",
  "minecraft:grass",
  "minecraft:hanging_roots",
  "minecraft:jack_o_lantern",
  "minecraft:jukebox",
  "minecraft:ladder",
  "minecraft:large_fern",
  "minecraft:lectern",
  "minecraft:lily_pad",
  "minecraft:loom",
  "minecraft:melon",
  "minecraft:melon_stem",
  "minecraft:mushroom_stem",
  "minecraft:nether_wart",
  "minecraft:note_block",
  "minecraft:potatoes",
  "minecraft:pumpkin",
  "minecraft:pumpkin_stem",
  "minecraft:red_mushroom",
  "minecraft:red_mushroom_block",
  "minecraft:scaffolding",
  "minecraft:small_dripleaf",
  "minecraft:smithing_table",
  "minecraft:soul_campfire",
  "minecraft:spore_blossom",
  "minecraft:sugar_cane",
  "minecraft:sweet_berry_bush",
  "minecraft:tall_grass",
  "minecraft:trapped_chest",
  "minecraft:twisting_vines",
  "minecraft:twisting_vines_plant",
  "minecraft:vine",
  "minecraft:warped_fungus",
  "minecraft:weeping_vines",
  "minecraft:weeping_vines_plant",
  "minecraft:wheat",
]
`;

exports[`loading of tags > resolves tags correctly > resolved #trapdoors entries 1`] = `
[
  "minecraft:acacia_trapdoor",
  "minecraft:birch_trapdoor",
  "minecraft:crimson_trapdoor",
  "minecraft:dark_oak_trapdoor",
  "minecraft:jungle_trapdoor",
  "minecraft:oak_trapdoor",
  "minecraft:spruce_trapdoor",
  "minecraft:warped_trapdoor",
  "create:framed_glass_trapdoor",
  "create:train_trapdoor",
  "minecraft:iron_trapdoor",
]
`;

exports[`removal of tag entries > removes tag entries using id > #oak_logs content 1`] = `
{
  "replace": true,
  "values": [
    "minecraft:oak_wood",
    "minecraft:stripped_oak_log",
    "minecraft:stripped_oak_wood",
  ],
}
`;

exports[`removal of tag entries > removes tag entries using predicate > modified #guarded_by_piglins 1`] = `
{
  "replace": true,
  "values": [
    "minecraft:barrel",
    "minecraft:black_shulker_box",
    "minecraft:blue_shulker_box",
    "minecraft:brown_shulker_box",
    "minecraft:chest",
    "minecraft:cyan_shulker_box",
    "minecraft:ender_chest",
    "minecraft:gilded_blackstone",
    "minecraft:gray_shulker_box",
    "minecraft:green_shulker_box",
    "minecraft:light_blue_shulker_box",
    "minecraft:light_gray_shulker_box",
    "minecraft:lime_shulker_box",
    "minecraft:magenta_shulker_box",
    "minecraft:orange_shulker_box",
    "minecraft:pink_shulker_box",
    "minecraft:purple_shulker_box",
    "minecraft:red_shulker_box",
    "minecraft:shulker_box",
    "minecraft:trapped_chest",
    "minecraft:white_shulker_box",
    "minecraft:yellow_shulker_box",
  ],
}
`;

exports[`removal of tag entries > removes tag entries using regex > modified #birch_logs 1`] = `
{
  "replace": true,
  "values": [
    "minecraft:birch_log",
    "minecraft:birch_wood",
  ],
}
`;

exports[`removal of tag entries > removes tag entries using tag > modified #guarded_by_piglins 1`] = `
{
  "replace": true,
  "values": [],
}
`;

exports[`removal of tag entries > removes tag entries using tag > modified #minable/axe 1`] = `
{
  "replace": true,
  "values": [
    "create:adjustable_chain_gearshift",
    "create:analog_lever",
    "create:andesite_casing",
    "create:andesite_door",
    "create:andesite_encased_cogwheel",
    "create:andesite_encased_large_cogwheel",
    "create:andesite_encased_shaft",
    "create:belt",
    "create:black_sail",
    "create:black_seat",
    "create:blue_sail",
    "create:blue_seat",
    "create:brass_casing",
    "create:brass_door",
    "create:brass_encased_cogwheel",
    "create:brass_encased_large_cogwheel",
    "create:brass_encased_shaft",
    "create:brown_sail",
    "create:brown_seat",
    "create:cart_assembler",
    "create:clipboard",
    "create:clockwork_bearing",
    "create:clutch",
    "create:cogwheel",
    "create:content_observer",
    "create:contraption_controls",
    "create:copper_casing",
    "create:copper_door",
    "create:copycat_panel",
    "create:copycat_step",
    "create:creative_crate",
    "create:cuckoo_clock",
    "create:cyan_sail",
    "create:cyan_seat",
    "create:deployer",
    "create:depot",
    "create:display_link",
    "create:elevator_contact",
    "create:elevator_pulley",
    "create:encased_chain_drive",
    "create:encased_fan",
    "create:encased_fluid_pipe",
    "create:flywheel",
    "create:framed_glass_door",
    "create:gantry_carriage",
    "create:gantry_shaft",
    "create:gearbox",
    "create:gearshift",
    "create:gray_sail",
    "create:gray_seat",
    "create:green_sail",
    "create:green_seat",
    "create:hand_crank",
    "create:large_cogwheel",
    "create:large_water_wheel",
    "create:lectern_controller",
    "create:light_blue_sail",
    "create:light_blue_seat",
    "create:light_gray_sail",
    "create:light_gray_seat",
    "create:lime_sail",
    "create:lime_seat",
    "create:linear_chassis",
    "create:magenta_sail",
    "create:magenta_seat",
    "create:mechanical_arm",
    "create:mechanical_bearing",
    "create:mechanical_crafter",
    "create:mechanical_drill",
    "create:mechanical_harvester",
    "create:mechanical_mixer",
    "create:mechanical_piston",
    "create:mechanical_piston_head",
    "create:mechanical_plough",
    "create:mechanical_press",
    "create:mechanical_roller",
    "create:mechanical_saw",
    "create:mysterious_cuckoo_clock",
    "create:nozzle",
    "create:orange_sail",
    "create:orange_seat",
    "create:pink_sail",
    "create:pink_seat",
    "create:piston_extension_pole",
    "create:portable_fluid_interface",
    "create:portable_storage_interface",
    "create:purple_sail",
    "create:purple_seat",
    "create:radial_chassis",
    "create:railway_casing",
    "create:red_sail",
    "create:red_seat",
    "create:redstone_contact",
    "create:redstone_link",
    "create:refined_radiance_casing",
    "create:rope_pulley",
    "create:rotation_speed_controller",
    "create:sail_frame",
    "create:schematic_table",
    "create:secondary_linear_chassis",
    "create:sequenced_gearshift",
    "create:shadow_steel_casing",
    "create:speedometer",
    "create:sticky_mechanical_piston",
    "create:stockpile_switch",
    "create:stressometer",
    "create:train_door",
    "create:turntable",
    "create:water_wheel",
    "create:water_wheel_structure",
    "create:weighted_ejector",
    "create:white_sail",
    "create:white_seat",
    "create:windmill_bearing",
    "create:wooden_bracket",
    "create:yellow_sail",
    "create:yellow_seat",
    "minecraft:acacia_button",
    "minecraft:acacia_door",
    "minecraft:acacia_fence",
    "minecraft:acacia_fence_gate",
    "minecraft:acacia_planks",
    "minecraft:acacia_pressure_plate",
    "minecraft:acacia_sapling",
    "minecraft:acacia_sign",
    "minecraft:acacia_slab",
    "minecraft:acacia_stairs",
    "minecraft:acacia_trapdoor",
    "minecraft:acacia_wall_sign",
    "minecraft:attached_melon_stem",
    "minecraft:attached_pumpkin_stem",
    "minecraft:azalea",
    "minecraft:bamboo",
    "minecraft:barrel",
    "minecraft:bee_nest",
    "minecraft:beehive",
    "minecraft:beetroots",
    "minecraft:big_dripleaf",
    "minecraft:big_dripleaf_stem",
    "minecraft:birch_button",
    "minecraft:birch_door",
    "minecraft:birch_fence",
    "minecraft:birch_fence_gate",
    "minecraft:birch_planks",
    "minecraft:birch_pressure_plate",
    "minecraft:birch_sapling",
    "minecraft:birch_sign",
    "minecraft:birch_slab",
    "minecraft:birch_stairs",
    "minecraft:birch_trapdoor",
    "minecraft:birch_wall_sign",
    "minecraft:black_banner",
    "minecraft:black_wall_banner",
    "minecraft:blue_banner",
    "minecraft:blue_wall_banner",
    "minecraft:bookshelf",
    "minecraft:brown_banner",
    "minecraft:brown_mushroom",
    "minecraft:brown_mushroom_block",
    "minecraft:brown_wall_banner",
    "minecraft:campfire",
    "minecraft:carrots",
    "minecraft:cartography_table",
    "minecraft:carved_pumpkin",
    "minecraft:cave_vines",
    "minecraft:cave_vines_plant",
    "minecraft:chest",
    "minecraft:chorus_flower",
    "minecraft:chorus_plant",
    "minecraft:cocoa",
    "minecraft:composter",
    "minecraft:crafting_table",
    "minecraft:crimson_button",
    "minecraft:crimson_door",
    "minecraft:crimson_fence",
    "minecraft:crimson_fence_gate",
    "minecraft:crimson_fungus",
    "minecraft:crimson_planks",
    "minecraft:crimson_pressure_plate",
    "minecraft:crimson_sign",
    "minecraft:crimson_slab",
    "minecraft:crimson_stairs",
    "minecraft:crimson_trapdoor",
    "minecraft:crimson_wall_sign",
    "minecraft:cyan_banner",
    "minecraft:cyan_wall_banner",
    "minecraft:dark_oak_button",
    "minecraft:dark_oak_door",
    "minecraft:dark_oak_fence",
    "minecraft:dark_oak_fence_gate",
    "minecraft:dark_oak_planks",
    "minecraft:dark_oak_pressure_plate",
    "minecraft:dark_oak_sapling",
    "minecraft:dark_oak_sign",
    "minecraft:dark_oak_slab",
    "minecraft:dark_oak_stairs",
    "minecraft:dark_oak_trapdoor",
    "minecraft:dark_oak_wall_sign",
    "minecraft:daylight_detector",
    "minecraft:dead_bush",
    "minecraft:fern",
    "minecraft:fletching_table",
    "minecraft:flowering_azalea",
    "minecraft:glow_lichen",
    "minecraft:grass",
    "minecraft:gray_banner",
    "minecraft:gray_wall_banner",
    "minecraft:green_banner",
    "minecraft:green_wall_banner",
    "minecraft:hanging_roots",
    "minecraft:jack_o_lantern",
    "minecraft:jukebox",
    "minecraft:jungle_button",
    "minecraft:jungle_door",
    "minecraft:jungle_fence",
    "minecraft:jungle_fence_gate",
    "minecraft:jungle_planks",
    "minecraft:jungle_pressure_plate",
    "minecraft:jungle_sapling",
    "minecraft:jungle_sign",
    "minecraft:jungle_slab",
    "minecraft:jungle_stairs",
    "minecraft:jungle_trapdoor",
    "minecraft:jungle_wall_sign",
    "minecraft:ladder",
    "minecraft:large_fern",
    "minecraft:lectern",
    "minecraft:light_blue_banner",
    "minecraft:light_blue_wall_banner",
    "minecraft:light_gray_banner",
    "minecraft:light_gray_wall_banner",
    "minecraft:lily_pad",
    "minecraft:lime_banner",
    "minecraft:lime_wall_banner",
    "minecraft:loom",
    "minecraft:magenta_banner",
    "minecraft:magenta_wall_banner",
    "minecraft:melon",
    "minecraft:melon_stem",
    "minecraft:mushroom_stem",
    "minecraft:nether_wart",
    "minecraft:note_block",
    "minecraft:oak_button",
    "minecraft:oak_door",
    "minecraft:oak_fence",
    "minecraft:oak_fence_gate",
    "minecraft:oak_planks",
    "minecraft:oak_pressure_plate",
    "minecraft:oak_sapling",
    "minecraft:oak_sign",
    "minecraft:oak_slab",
    "minecraft:oak_stairs",
    "minecraft:oak_trapdoor",
    "minecraft:oak_wall_sign",
    "minecraft:orange_banner",
    "minecraft:orange_wall_banner",
    "minecraft:pink_banner",
    "minecraft:pink_wall_banner",
    "minecraft:potatoes",
    "minecraft:pumpkin",
    "minecraft:pumpkin_stem",
    "minecraft:purple_banner",
    "minecraft:purple_wall_banner",
    "minecraft:red_banner",
    "minecraft:red_mushroom",
    "minecraft:red_mushroom_block",
    "minecraft:red_wall_banner",
    "minecraft:scaffolding",
    "minecraft:small_dripleaf",
    "minecraft:smithing_table",
    "minecraft:soul_campfire",
    "minecraft:spore_blossom",
    "minecraft:spruce_button",
    "minecraft:spruce_door",
    "minecraft:spruce_fence",
    "minecraft:spruce_fence_gate",
    "minecraft:spruce_planks",
    "minecraft:spruce_pressure_plate",
    "minecraft:spruce_sapling",
    "minecraft:spruce_sign",
    "minecraft:spruce_slab",
    "minecraft:spruce_stairs",
    "minecraft:spruce_trapdoor",
    "minecraft:spruce_wall_sign",
    "minecraft:sugar_cane",
    "minecraft:sweet_berry_bush",
    "minecraft:tall_grass",
    "minecraft:trapped_chest",
    "minecraft:twisting_vines",
    "minecraft:twisting_vines_plant",
    "minecraft:vine",
    "minecraft:warped_button",
    "minecraft:warped_door",
    "minecraft:warped_fence",
    "minecraft:warped_fence_gate",
    "minecraft:warped_fungus",
    "minecraft:warped_planks",
    "minecraft:warped_pressure_plate",
    "minecraft:warped_sign",
    "minecraft:warped_slab",
    "minecraft:warped_stairs",
    "minecraft:warped_trapdoor",
    "minecraft:warped_wall_sign",
    "minecraft:weeping_vines",
    "minecraft:weeping_vines_plant",
    "minecraft:wheat",
    "minecraft:white_banner",
    "minecraft:white_wall_banner",
    "minecraft:yellow_banner",
    "minecraft:yellow_wall_banner",
  ],
}
`;
